<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">


    <AbsoluteLayout
        android:layout_width="353dp"
        android:layout_height="345dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="12dp"
            android:layout_y="53dp"
            android:text="@string/Nombre"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="12dp"
            android:layout_y="100dp"
            android:text="@string/Municipio"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="12dp"
            android:layout_y="135dp"
            android:text="@string/Departamento"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="12dp"
            android:layout_y="170dp"
            android:text="@string/Dirección"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_direccion"
            android:layout_width="190dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:layout_x="118dp"
            android:layout_y="170dp"
            android:textColor="@android:color/background_dark"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_x="118dp"
            android:layout_y="53dp"
            android:textColor="@android:color/background_dark"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_tipo"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="12dp"
            android:layout_y="16dp"
            android:elevation="1dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_departamento"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="118dp"
            android:layout_y="135dp"
            android:textColor="@android:color/background_dark"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_municipio"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="118dp"
            android:layout_y="100dp"
            android:textColor="@android:color/background_dark"
            tools:text="@string/app_name" />

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="158dp"
            android:layout_height="94dp"
            android:layout_x="91dp"
            android:layout_y="240dp"
            card_view:srcCompat="@mipmap/ic_launcher" />

    </AbsoluteLayout>

</android.support.v7.widget.CardView>
