<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.juan.oms.AcercaDe">

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="77dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="0.98"
            android:text="@string/creado_por"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="54dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Juan Esteban Cabrera"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="61dp"
            tools:textColor="@android:color/holo_orange_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal"
        android:weightSum="1">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="103dp"
            android:layout_height="94dp"
            android:layout_weight="0.68"
            app:srcCompat="@android:drawable/sym_action_call" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:text="300-632-1024"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="40sp"
            tools:textColor="@android:color/holo_green_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="88dp"
            android:layout_weight="0.03"
            app:srcCompat="@drawable/email_green_23345" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.03"
            android:text="juan443@gmail.com"
            android:textColor="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:gravity="center"
        android:text="@string/Todos_los_Derechos"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        tools:textSize="36sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:gravity="center"
        android:text="@string/reservados"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        tools:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="acercade"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.38"
        android:orientation="vertical"
        tools:orientation="vertical">

    </LinearLayout>

</LinearLayout>
